processor/src/test/resources/model/good/ParentModel.java
package com.bluelinelabs.logansquare.processor;

import com.bluelinelabs.logansquare.annotation.JsonField;
import com.bluelinelabs.logansquare.annotation.JsonObject;

@JsonObject
public class ParentModel {

    @JsonField
    public int parentTestInt;

}
